@@ -14,20 +14,24 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.2</version>
+		<version>2.6.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>15</java.version>
+		<java.version>17</java.version>
 		<postgres.version>42.2.4</postgres.version>
-
+		<annotations.version>23.0.0</annotations.version>
+		<validation-api.version>2.0.1.Final</validation-api.version>
+		<httpclient.version>4.5.13</httpclient.version>
+		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+		<maven-compiler-plugin.version>3.10.0</maven-compiler-plugin.version>
 		<!-- test -->
 		<mockito-junit-jupiter.version>3.4.4</mockito-junit-jupiter.version>
 		<jsonassert.version>1.5.0</jsonassert.version>
-		<testcontainers.version>1.15.2</testcontainers.version>
-
+		<testcontainers.version>1.15.3</testcontainers.version>
+		<junit-jupiter-engine.version>5.8.2</junit-jupiter-engine.version>
 	</properties>
 
 	<dependencies>
@@ -64,12 +68,17 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.12</version>
+			<version>${httpclient.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations</artifactId>
-			<version>20.1.0</version>
+			<version>${annotations.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${validation-api.version}</version>
 		</dependency>
 
 	    <!-- TEST SCOPE -->
@@ -132,11 +141,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<compilerArgs>--enable-preview</compilerArgs>
-					<source>15</source>
-					<target>15</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -156,9 +164,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M4</version>
+				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
 					<runOrder>alphabetical</runOrder>
 					<excludes>
 						<exclude>**/*IntegrationTest.java</exclude>
@@ -169,16 +176,15 @@
 					<dependency>
 						<groupId>org.junit.jupiter</groupId>
 						<artifactId>junit-jupiter-engine</artifactId>
-						<version>5.6.2</version>
+						<version>${junit-jupiter-engine.version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M4</version>
+				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
-					<argLine>--enable-preview</argLine>
 					<includes>
 						<include>**/*IntegrationTest.java</include>
 					</includes>
@@ -187,7 +193,7 @@
 					<dependency>
 						<groupId>org.junit.jupiter</groupId>
 						<artifactId>junit-jupiter-engine</artifactId>
-						<version>5.6.2</version>
+						<version>${junit-jupiter-engine.version}</version>
 					</dependency>
 				</dependencies>
 				<executions>
